--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -113,7 +113,7 @@
 </footer>
 
 <!-- For loadCSS 异步加载css 
-<script>
+<script type="text/javascript" >
 /*! loadCSS. [c]2017 Filament Group, Inc. MIT License */
 !function(a){"use strict";var b=function(b,c,d){function e(a){return h.body?a():void setTimeout(function(){e(a)})}function f(){i.addEventListener&&i.removeEventListener("load",f),i.media=d||"all"}var g,h=a.document,i=h.createElement("link");if(c)g=c;else{var j=(h.body||h.getElementsByTagName("head")[0]).childNodes;g=j[j.length-1]}var k=h.styleSheets;i.rel="stylesheet",i.href=b,i.media="only x",e(function(){g.parentNode.insertBefore(i,c?g:g.nextSibling)});var l=function(a){for(var b=i.href,c=k.length;c--;)if(k[c].href===b)return a();setTimeout(function(){l(a)})};return i.addEventListener&&i.addEventListener("load",f),i.onloadcssdefined=l,l(f),i};"undefined"!=typeof exports?exports.loadCSS=b:a.loadCSS=b}("undefined"!=typeof global?global:this);
 /*! loadCSS rel=preload polyfill. [c]2017 Filament Group, Inc. MIT License */
@@ -142,7 +142,7 @@
 {% endif %}
 
 <!-- async load function -->
-<script>
+<script type="text/javascript">
     function async(u, c) {
       var d = document, t = 'script',
           o = d.createElement(t),
@@ -165,14 +165,14 @@
 -->
 
 <!--
-    <script>
+    <script type="text/javascript">
         async("//cdn.bootcss.com/highlight.js/8.6/highlight.min.js", function(){hljs.initHighlightingOnLoad();})
     </script>
     <link href="//cdn.bootcss.com/highlight.js/8.6/styles/github.min.css" rel="stylesheet" />
 -->
 
 <!-- jquery.tagcloud.js -->
-<script>
+<script type="text/javascript">
     /* only load tagcloud.js in tag.html */
     if($('#tag_cloud').length !== 0){
         async('{{ "/js/jquery.tagcloud.min.js" | prepend: site.baseurl }}',function(){
@@ -187,7 +187,7 @@
 </script>
 
 <!--fastClick.js -->
-<script>
+<script type="text/javascript">
     async("//cdnjs.cloudflare.com/ajax/libs/fastclick/1.0.6/fastclick.min.js", function(){
         var $nav = document.querySelector("nav");
         if($nav) FastClick.attach($nav);
@@ -242,7 +242,7 @@
 {% endif %}
 
 <!-- 网站运行时间记录 -->
-<script>
+<script type="text/javascript">
     window.setInterval('counter()',1000);
     function counter(){
         var date=new Date();
@@ -259,7 +259,7 @@
 
 <!-- 不蒜子计数初始值纠正 -->
 {% if site.busuanzi and site.busuanzi_fixcount %}
-<script>
+<script type="text/javascript">
     $(document).ready(function() {
         var int = setInterval(fixCount, 50);  /* 50ms周期检测函数 */
         var pv_countOffset = 1995;  /* 初始化首次数据 */
@@ -282,7 +282,7 @@
 
 <!-- daovoice -->
 {% if site.daovoice %}
-    <script>(function(i,s,o,g,r,a,m){i["DaoVoiceObject"]=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,"script","//widget.daovoice.io/widget/f72737da.js","daovoice");</script>
+    <script type="text/javascript">(function(i,s,o,g,r,a,m){i["DaoVoiceObject"]=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,"script","//widget.daovoice.io/widget/f72737da.js","daovoice");</script>
     <!-- 非注册用户-->
     <script type="text/javascript">
         daovoice('init', {
@@ -310,7 +310,7 @@
 
 <!-- Google Analytics -->
 {% if site.ga_track_id %}
-    <script>
+    <script type="text/javascript">
     window.onload=function(){
         /* dynamic User by Quanyin */
         var _gaId = '{{ site.ga_track_id }}';
@@ -328,7 +328,7 @@
 
 <!-- Baidu Tongji -->
 {% if site.ba_track_id %}
-    <script>
+    <script type="text/javascript">
         /* dynamic User by Quanyin */
         var _baId = '{{ site.ba_track_id }}';
         /* Originial */
@@ -346,7 +346,7 @@
 {% if site.push-for-include %}
     <!-- 百度收录-->
     {% if site.push-to-baidu %}
-        <script>
+        <script type="text/javascript">
         (function(){
             var bp = document.createElement('script');
             var curProtocol = window.location.protocol.split(':')[0];
@@ -363,7 +363,7 @@
     {% endif %}
     <!-- 360收录-->
     {% if site.push-to-360 %}
-        <script>
+        <script type="text/javascript">
         (function(){
            var src = (document.location.protocol == "http:") ? "http://js.passport.qihucdn.com/11.0.1.js?d7af82f5d5a7d431d4b53f4d0069f989":"https://jspassport.ssl.qhimg.com/11.0.1.js?d7af82f5d5a7d431d4b53f4d0069f989";
            document.write('<script src="' + src + '" id="sozz"><\/script>');
@@ -413,7 +413,7 @@
 <div id="back-top">
   <a href="#top" title="回到顶部"></a>
 </div>
-<script>
+<script type="text/javascript">
 $("#back-top").hide();
 $(document).ready(function () {
   $(window).scroll(function () {
